<resources>
    <string name="app_name">Find the Spy</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">START</string>
    <string name="exit">Exit</string>
    <string name="instructions">Instructions</string>
    <string name="locationsList">Locations List</string>
    <string name="exitDialogMessage">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_3_min">3 MIN</string>
    <string name="number_of_people">Number of people</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="time_init_text">00:01:00</string>
    <string name="manual_finish_game">Finish the game</string>
    <string name="spy">Spy:</string>
    <string name="player">Player </string>
    <string name="view_item_list">View Item List</string>
    <string name="view_answer">View Answer</string>
    <string name="answer">answer: </string>
    <string name="backToMainMenu">Main Menu</string>
    <string name="view_role">View Role</string>
    <string name="got_it">Got It</string>
    <string name="spySimple">Spy</string>

</resources>
