<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:range="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<Button-->
            <!--android:id="@+id/dummy_button"-->
            <!--style="?metaButtonBarButtonStyle"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/dummy_button" />-->

        <Button
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?metaButtonBarButtonStyle"
            android:text="@string/exit"/>

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?metaButtonBarButtonStyle"
            android:text="@string/instructions"/>

        <Button
            android:id="@+id/locations_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?metaButtonBarButtonStyle"
            android:text="@string/locationsList"/>

    </LinearLayout>
    <!--<TextView-->
        <!--android:id="@+id/fullscreen_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center"-->
        <!--android:keepScreenOn="true"-->
        <!--android:text="@string/dummy_content"-->
        <!--android:textColor="#33b5e5"-->
        <!--android:textSize="50sp"-->
        <!--android:textStyle="bold" />-->

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <!--<ImageView-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:background="@color/colorAccent"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="25dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="40dp"
                >

                <com.ramotion.fluidslider.FluidSlider
                    android:id="@+id/people_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="0dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/people_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_of_people"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="18dp"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.bozapro.circularsliderrange.CircularSliderRange
                    android:id="@+id/time_slider"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    range:arc_color="@color/colorAccent"
                    range:arc_dash_size="15dp"
                    range:border_color="#6168E6"
                    range:border_thickness="10dp"
                    range:end_angle="0"
                    range:start_angle="270"
                    range:start_thumb_color="#30AEFF"
                    range:start_thumb_size="0dp"
                    range:thumb_size="30dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:text="@string/_3_min"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/start_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            style="?metaButtonBarButtonStyle"
            android:text="@string/start"/>


    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>